--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>🏸 Inter-Hostel Badminton Fixtures (Live)</title>
 
-<!-- ========== Firebase Setup ========== -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import {
-  getFirestore, doc, getDoc, setDoc, onSnapshot
-} from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+/* ----------------- Firebase setup ----------------- */
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+import { getFirestore, doc, getDoc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-firestore.js";
 
-/* --- Replace this with your Firebase Config --- */
+/* --- Your Firebase config --- */
 const firebaseConfig = {
   apiKey: "AIzaSyAYEBi37iNUdsTzoAmuh47phNJkjD0245w",
   authDomain: "badminton-fixtures-5610f.firebaseapp.com",
@@ -22,61 +20,87 @@ const firebaseConfig = {
   appId: "1:296007773773:web:f59d1804da15464f587604",
   measurementId: "G-7T6Q002VRS"
 };
-
 const app = initializeApp(firebaseConfig);
-const db  = getFirestore(app);
-const docRef = doc(db,"fixtures","main");
+const db = getFirestore(app);
+const docRef = doc(db, "fixtures", "main");
 
-/* --- DOM elements --- */
+/* ----------------- Page elements ----------------- */
 const bracketEl = document.getElementById("bracket");
 const teamsEl   = document.getElementById("teams");
 const pwEl      = document.getElementById("pw");
 const adminBox  = document.getElementById("adminBox");
+const startEl   = document.getElementById("startTime");
+const courtEl   = document.getElementById("courtCount");
 
 let admin = false;
 
-/* --- Listen for Live Changes --- */
+/* ----------------- Firestore live listener ----------------- */
 onSnapshot(docRef, (snap)=>{
-  if(!snap.exists()){ 
-    bracketEl.innerHTML = "<p>No fixtures yet. (Admin: add teams to generate)</p>"; 
+  if(!snap.exists()){
+    bracketEl.innerHTML = "<p>No fixtures yet (Admin: add teams to generate).</p>";
     return;
   }
-  const data = snap.data();
-  renderBracket(data);
+  renderBracket(snap.data());
 });
 
-/* --- Admin Login --- */
+/* ----------------- Admin login ----------------- */
 window.login = () => {
   const pass = pwEl.value.trim();
   if(pass === "admin123"){
     admin = true;
-    adminBox.style.display = 'block';
-    alert("✅ Admin logged in");
+    adminBox.style.display = "block";
+    alert("✅ Logged in as admin");
   } else alert("❌ Wrong password");
 };
 
-/* --- Generate Fixtures --- */
+/* ----------------- Generate Fixtures ----------------- */
 window.generate = async () => {
   if(!admin) return alert("Admin only");
   const teams = teamsEl.value.trim().split("\n").filter(x=>x);
   if(teams.length < 2) return alert("Need at least 2 teams");
 
-  // Make number of teams a power of 2
+  const courtCount = parseInt(courtEl.value);
+  const startTime = startEl.value;
+  if(!startTime) return alert("Enter start time");
+
+  // make number of teams a power of 2
   const nextPow = 2 ** Math.ceil(Math.log2(teams.length));
   while(teams.length < nextPow) teams.push("BYE");
 
   const rounds = [];
-  let currentRound = [];
+  const firstRound = [];
   for(let i=0; i<teams.length; i+=2){
-    currentRound.push({ a:teams[i], b:teams[i+1], winner:null });
+    firstRound.push({ a: teams[i], b: teams[i+1], winner:null, court:null, time:null });
   }
-  rounds.push(currentRound);
+  rounds.push(firstRound);
 
-  const data = { teams, rounds };
+  // Schedule matches
+  const scheduled = scheduleMatches(firstRound, startTime, courtCount);
+  scheduled.forEach((m,i)=>{ rounds[0][i].time=m.time; rounds[0][i].court=m.court; });
+
+  const data = { teams, rounds, startTime, courtCount };
   await setDoc(docRef, data);
 };
 
-/* --- Render the Bracket --- */
+/* ----------------- Schedule Function ----------------- */
+function scheduleMatches(matches, startTime, courts){
+  const result = [];
+  const start = new Date(`1970-01-01T${startTime}:00`);
+  let current = new Date(start);
+  let matchLen = 30; // each match 30 mins
+
+  for(let i=0; i<matches.length; i++){
+    const court = (i % courts) + 1;
+    if(i>0 && i % courts === 0){
+      current = new Date(current.getTime() + matchLen*60000);
+    }
+    const timeStr = current.toTimeString().substring(0,5);
+    result.push({ court, time: timeStr });
+  }
+  return result;
+}
+
+/* ----------------- Render Bracket ----------------- */
 function renderBracket(data){
   bracketEl.innerHTML = "";
 
@@ -91,21 +115,22 @@ function renderBracket(data){
     round.forEach((m, matchIndex)=>{
       const matchDiv = document.createElement("div");
       matchDiv.className = "match";
+
       matchDiv.innerHTML = `
         <strong>${m.a}</strong> vs <strong>${m.b}</strong><br>
-        ${m.winner ? `🏆 Winner: <b>${m.winner}</b>` : ''}
+        🕒 ${m.time || "-"} | 🏟️ Court ${m.court || "-"}<br>
+        ${m.winner ? `🏆 Winner: <b>${m.winner}</b>` : ""}
       `;
 
       if(admin && !m.winner && m.a !== "BYE" && m.b !== "BYE"){
         matchDiv.onclick = async ()=>{
           const choice = prompt(`Enter winner:\nA) ${m.a}\nB) ${m.b}`);
           if(!choice) return;
-          const winner = (choice.toUpperCase() === 'A') ? m.a : (choice.toUpperCase() === 'B' ? m.b : null);
+          const winner = (choice.toUpperCase()==="A")?m.a:(choice.toUpperCase()==="B")?m.b:null;
           if(!winner) return alert("Invalid choice");
           await updateWinner(roundIndex, matchIndex, winner);
         };
       }
-
       roundDiv.appendChild(matchDiv);
     });
 
@@ -113,89 +138,43 @@ function renderBracket(data){
   });
 }
 
-/* --- Update Winner Logic --- */
+/* ----------------- Update Winner ----------------- */
 async function updateWinner(roundIndex, matchIndex, winner){
   const snap = await getDoc(docRef);
   const data = snap.data();
   data.rounds[roundIndex][matchIndex].winner = winner;
 
-  // Move winner to next round
-  const nextRoundIndex = roundIndex + 1;
-  if(!data.rounds[nextRoundIndex]) data.rounds[nextRoundIndex] = [];
+  // move to next round
+  const next = roundIndex + 1;
+  if(!data.rounds[next]) data.rounds[next] = [];
 
-  const targetMatch = Math.floor(matchIndex / 2);
-  if(!data.rounds[nextRoundIndex][targetMatch]){
-    data.rounds[nextRoundIndex][targetMatch] = { a:null, b:null, winner:null };
-  }
-  if(matchIndex % 2 === 0)
-    data.rounds[nextRoundIndex][targetMatch].a = winner;
-  else
-    data.rounds[nextRoundIndex][targetMatch].b = winner;
+  const target = Math.floor(matchIndex / 2);
+  if(!data.rounds[next][target]) data.rounds[next][target] = { a:null, b:null, winner:null, time:null, court:null };
+
+  if(matchIndex % 2 === 0) data.rounds[next][target].a = winner;
+  else data.rounds[next][target].b = winner;
 
   await setDoc(docRef, data);
 }
 </script>
 
-<!-- ========== Styles ========== -->
 <style>
-body {
-  font-family: "Segoe UI", sans-serif;
-  background: #f7f9fc;
-  margin: 20px;
-  color: #222;
-}
-h2 { text-align: center; }
-h3 { margin-top: 20px; color: #004aad; }
-.round {
-  background: #ffffff;
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px #d0d0d0;
-  margin-bottom: 15px;
-}
-.match {
-  background: #f1f6ff;
-  padding: 8px;
-  border-radius: 6px;
-  margin: 5px 0;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.match:hover {
-  background: #ddecff;
-}
-textarea {
-  width: 100%;
-  min-height: 120px;
-  border-radius: 6px;
-  padding: 8px;
-}
-button {
-  padding: 8px 12px;
-  margin: 6px 4px;
-  border: none;
-  border-radius: 6px;
-  background: #004aad;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.3s;
-}
-button:hover { background: #0066ff; }
-#adminBox {
-  display: none;
-  margin-top: 20px;
-  background: #fff;
-  padding: 15px;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px #ccc;
-}
+body{font-family:Segoe UI, sans-serif;background:#f6f9ff;margin:20px;}
+h2{text-align:center;margin-bottom:15px;}
+h3{color:#004aad;margin-top:10px;}
+.round{background:#fff;border-radius:10px;padding:12px;box-shadow:0 2px 5px #ccc;margin-bottom:15px;}
+.match{background:#eef4ff;padding:8px;margin:6px 0;border-radius:6px;cursor:pointer;transition:.3s;}
+.match:hover{background:#ddecff;}
+textarea,input,select{border-radius:6px;padding:8px;width:100%;margin:5px 0;}
+button{background:#004aad;color:#fff;border:none;padding:8px 12px;border-radius:6px;margin:4px;cursor:pointer;}
+button:hover{background:#0066ff;}
+#adminBox{display:none;background:#fff;padding:15px;margin-top:20px;border-radius:10px;box-shadow:0 2px 5px #bbb;}
 </style>
 </head>
 
 <body>
 <h2>🏸 Inter-Hostel Badminton Fixtures (Live)</h2>
 <div id="bracket">Loading…</div>
-
 <hr>
 <div id="adminLogin">
   <input id="pw" type="password" placeholder="Admin password">
@@ -204,6 +183,10 @@ button:hover { background: #0066ff; }
 
 <div id="adminBox">
   <h3>Admin Panel</h3>
+  <label>Start Time:</label>
+  <input id="startTime" type="time"><br>
+  <label>No. of Courts:</label>
+  <input id="courtCount" type="number" min="1" max="10" value="2"><br>
   <textarea id="teams" placeholder="Enter team names (one per line)"></textarea><br>
   <button onclick="generate()">Generate Fixtures</button>
 </div>
